# IC-wasm-IoT

./: .gitgnore  README.md  ROADMAP.md  risk.wasm  sensor_enchente_wifi.ino
cloud-runtime/: cloud_dash.py  requirements.txt
edge-esp32/: CMakeLists.txt
edge-esp32/main/: CMakeLists.txt  guest.h  idf_component.yml  main.c
esp32/: comandos.txt
esp32/main/: guest.h
fog-runtime/: comand_venv.txt  comando_build.txt  guest.wasm  guest_pi.c  guest_pi.wasm  host_pi.py
src/: comandos.txt  guest.c  test.c  test.o~  test.wasm  test_wasm.h  wasm_test.h  wasm_test_file_interp.h
src/main/: CMakeLists.txt  idf_component.yml  main (copy).c  main.c
wasm-modules/: guest.c  guest.wasm
